# MediHaven

./: .gitignore  MediHaven.md  README.md
backend/: main.py
backend/api_server/: connect_db_sample.py  main.py  myRedis.py  reset_db.py  sign.py  xmpp.py
backend/api_server/apis/: medicines.py  record.py  schedule.py  user.py
backend/api_server/grpc_client/: build.sh  example.py  grpc_api.py  mediheaven_pb2.py  mediheaven_pb2_grpc.py
backend/api_server/sql/: DDL.sql  clear.sql  filter.py  inserts.sql
backend/fake_data/Administrator/: Admin.csv  Administrator .csv  Administrator.sql
backend/fake_data/Department/: Department.csv  Department.sql
backend/fake_data/Insurance/: Insurance.csv  Insurance.sql
backend/fake_data/Insurance /: Insurance.csv
backend/fake_data/Key/: key_ID.csv
backend/fake_data/Medical_Record/: Medical_Record.csv  Medical_Record.sql
backend/proto/: mediheaven.proto
backend/script/: reset-db  reset-grpc
backend/sec_server/: Cargo.toml  build.rs
backend/sec_server/proto/: mediheaven.proto
backend/sec_server/src/: client.rs  connect_db_sample.rs  constants.rs  db_handler.rs  encrypt.rs  gen_shares.rs  gen_signature.rs  globals.rs  init_key.rs  lib.rs  main.rs  mediheaven.rs  mycrypto.rs  mytypes.rs  myutils.rs  playground.rs  server.rs  sign.rs
backend/sec_server/src/services/: account.rs  code.rs  medical_record.rs  misc.rs  mod.rs  schedule.rs
backend/sql/: DDL.sql
backend/tests/: test_code.py  test_get_physician.py  test_login.py  test_medicines.py  test_patient.py  test_record.py  test_register.py  test_schedule.py
backend/xmpp_server/: server.py
frontend/: index.html  login.php  package-lock.json  package.json
frontend/src/: App.js
(+108 files in other folders)
