[package]
name = "sec_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

# [[bin]]
# name = "mediheaven-client"
# path = "src/client.rs"

[[bin]]
name = "connect_db_sample"
path = "src/connect_db_sample.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.12"
tonic = "0.11.0"
# tiberius = "0.12.2"
tokio-util = { version = "0.7.10", features = ["compat"] }
anyhow = "1.0.81"
once_cell = "1.19.0"
odbc-api = "6.0.2"
csv = "1.3.0"

[build-dependencies]
tonic-build = "0.11.0"
