[package]
name = "sec_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "init-key"
path = "src/init_key.rs"

[[bin]]
name = "sign"
path = "src/gen_signature.rs"

# [[bin]]
# name = "mediheaven-client"
# path = "src/client.rs"

[[bin]]
name = "connect_db_sample"
path = "src/connect_db_sample.rs"

[[bin]]
name = "play"
path = "src/playground.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.12"
tonic = "0.11.0"
# tiberius = "0.12.2"
tokio-util = { version = "0.7.10", features = ["compat"] }
anyhow = "1.0.81"
once_cell = "1.19.0"
odbc-api = "6.0.2"
csv = "1.3.0"
lazy_static = "1.4.0"
pem = "3.0.3"
chacha20poly1305 = "0.10.1"
generic-array = "1.0.0"
sha256 = "1.5.0"
rsa = { version = "0.9.6", features = ["pem", "std", "u64_digit", "sha2"] }
openssl = "0.10.64"
rand = "0.8.5"
base64 = "0.22.0"
json = "0.12.4"
chrono = "0.4.35"

[build-dependencies]
tonic-build = "0.11.0"
